--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,22 @@
     {% else %}
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
-  </title>
+  </title
+    
+  
+  {% if page.maps %}
+<script src="/assets/jquery-1.11.1/jquery.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link href="/assets/bootstrap-3.3.1/css/bootstrap.min.css" rel="stylesheet" />
+<script src="/assets/bootstrap-3.3.1/js/bootstrap.min.js"></script>
+<script src="/assets/bootstrap-3.3.1/shim/html5shiv.min.js"></script>
+<script src="/assets/bootstrap-3.3.1/shim/respond.min.js"></script>
+<script src="/assets/htmlwidgets-0.5/htmlwidgets.js"></script>
+<link href="/assets/leaflet-0.7.3/leaflet.css" rel="stylesheet" />
+<script src="/assets/leaflet-0.7.3/leaflet.js"></script>
+<link href="/assets/leafletfix-1.0.0/leafletfix.css" rel="stylesheet" />
+<script src="/assets/leaflet-binding-1.0.1/leaflet.js"></script>
+{% endif %}
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
