--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 {% if page.htmlwidgets %}
 {% for html_dep in site.static_files %}
   {% if html_dep.path contains 'htmlwidgets_deps/' %}
@@ -18,6 +21,8 @@ layout: default
     {% else %}
         {{ site.author.name }}
     {% endif %}
+    
+    <span>@katiejolly6</span>
 
     {% if page.date %}
       <br>
